progride com varias melhorias

--- a/src/kernel/server/TriPower.Kernel.Server.csproj
+++ b/src/kernel/server/TriPower.Kernel.Server.csproj
@@ -27,6 +27,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\application\TriPower.Kernel.Application.csproj"/>
+        <ProjectReference Include="..\client\TriPower.Kernel.Client.csproj" />
     </ItemGroup>
 
 </Project>
