--- a/src/presentation/web/server/TriPower.Presentation.Web.csproj
+++ b/src/presentation/web/server/TriPower.Presentation.Web.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0-preview.6.25358.103" />
     </ItemGroup>
     
     <ItemGroup>
@@ -18,7 +18,7 @@
 
         <!--    Tri Client    -->
         <ProjectReference Include="..\client\TriPower.Presentation.Web.Client.csproj"/>
-        
+
         <!--    Tri Identity Module    -->
         <ProjectReference Include="..\..\..\services\identity\application\TriPower.Identity.Application.csproj"/>
         <ProjectReference Include="..\..\..\services\identity\ioc\TriPower.Identity.IoC.csproj"/>
