--- a/src/presentation/web/server/appsettings.Development.json
+++ b/src/presentation/web/server/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TriIdentityConnection": "Server=localhost,1433;Database=TriPowerDev;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
