--- a/src/presentation/web/server/appsettings.Development.json
+++ b/src/presentation/web/server/appsettings.Development.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "TriIdentityConnection": "Server=localhost,1433;Database=TriPowerDev;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;"
   },
+  "JwtOptions": {
+    "Issuer": "localhost:5001",
+    "Audience": "localhost:5001",
+    "SecretKey": "asdfghjklqwertyuiopzxcvbnm1234567890!@#$%^&*()_+",
+    "AccessTokenExpirationInMinutes": 60,
+    "RefreshTokenExpirationInMinutes": 2880
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
