--- a/src/services/identity/infrastructure/TriPower.Identity.Infrastructure.csproj
+++ b/src/services/identity/infrastructure/TriPower.Identity.Infrastructure.csproj
@@ -8,11 +8,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0-preview.6.25358.103" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0-preview.6.25358.103"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\domain\TriPower.Identity.Domain.csproj"/>
+        <ProjectReference Include="..\application\TriPower.Identity.Application.csproj" />
     </ItemGroup>
 
 </Project>
