--- a/src/kernel/server/TriPower.Kernel.Server.csproj
+++ b/src/kernel/server/TriPower.Kernel.Server.csproj
@@ -28,6 +28,7 @@
     <ItemGroup>
         <ProjectReference Include="..\application\TriPower.Kernel.Application.csproj"/>
         <ProjectReference Include="..\client\TriPower.Kernel.Client.csproj" />
+        <ProjectReference Include="..\core\TriPower.Kernel.csproj" />
     </ItemGroup>
 
 </Project>
