--- a/src/presentation/web/client/TriPower.Presentation.Web.Client.csproj
+++ b/src/presentation/web/client/TriPower.Presentation.Web.Client.csproj
@@ -11,6 +11,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.0-preview.6.25358.103" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="10.0.0-preview.6.25358.103" />
+    </ItemGroup>
+    
+    <ItemGroup>
         <ProjectReference Include="..\..\..\kernel\client\TriPower.Kernel.Client.csproj"/>
         <ProjectReference Include="..\..\..\services\identity\application.shared\TriPower.Identity.Application.Shared.csproj"/>
     </ItemGroup>
