--- a/src/presentation/web/server/TriPower.Presentation.Web.csproj
+++ b/src/presentation/web/server/TriPower.Presentation.Web.csproj
@@ -9,7 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Scalar.AspNetCore" Version="2.6.4"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0-preview.6.25358.103" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0-preview.6.25358.103" />
     </ItemGroup>
     
     <ItemGroup>
