--- a/src/services/electrical/application.shared/TriPower.Electrical.Application.Shared.csproj
+++ b/src/services/electrical/application.shared/TriPower.Electrical.Application.Shared.csproj
@@ -1,9 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net10.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <LangVersion>preview</LangVersion>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\kernel\application.shared\TriPower.Kernel.Application.Shared.csproj"/>
+        <ProjectReference Include="..\domain.shared\TriPower.Electrical.Domain.Shared.csproj"/>
+    </ItemGroup>
 
 </Project>
