progride novos moduloes |

--- a/src/kernel/application.shared/TriPower.Kernel.Application.Shared.csproj
+++ b/src/kernel/application.shared/TriPower.Kernel.Application.Shared.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0-preview.6.25358.103" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\core\TriPower.Kernel.csproj" />
+    </ItemGroup>
+
 </Project>
