--- a/src/presentation/web/server/appsettings.Development.json
+++ b/src/presentation/web/server/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "TriIdentityConnection": "Server=localhost,1433;Database=TriPowerDev;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;"
+    "TriIdentityConnection": "Server=localhost,1433;Database=TriPowerIdentityDev;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;",
+    "TriElectricalConnection": "Server=localhost,1433;Database=TriPowerElectricalDev;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;"
   },
   "JwtOptions": {
     "Issuer": "localhost:7000",
