--- a/src/kernel/server/TriPower.Kernel.Server.csproj
+++ b/src/kernel/server/TriPower.Kernel.Server.csproj
@@ -19,6 +19,7 @@
     <ItemGroup>
 <!--        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0-preview.6.25358.103"/>-->
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="10.0.0-preview.6.25358.103"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0-preview.6.25358.103" />
     </ItemGroup>
 
     <ItemGroup>
@@ -29,6 +30,7 @@
         <ProjectReference Include="..\application\TriPower.Kernel.Application.csproj"/>
         <ProjectReference Include="..\client\TriPower.Kernel.Client.csproj" />
         <ProjectReference Include="..\core\TriPower.Kernel.csproj" />
+        <ProjectReference Include="..\domain\TriPower.Kernel.Domain.csproj" />
     </ItemGroup>
 
 </Project>
