mais e mais melhorias

--- a/src/kernel/server/TriPower.Kernel.Server.csproj
+++ b/src/kernel/server/TriPower.Kernel.Server.csproj
@@ -27,6 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\services\identity\infrastructure\TriPower.Identity.Infrastructure.csproj" />
         <ProjectReference Include="..\application\TriPower.Kernel.Application.csproj"/>
         <ProjectReference Include="..\client\TriPower.Kernel.Client.csproj" />
         <ProjectReference Include="..\core\TriPower.Kernel.csproj" />
