--- a/src/kernel/domain/TriPower.Kernel.Domain.csproj
+++ b/src/kernel/domain/TriPower.Kernel.Domain.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\core\TriPower.Kernel.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Cblx.Blocks.SourceGenerators.EmptyConstructor" Version="0.16.0" />
+    </ItemGroup>
+
 </Project>
