criação de room e mais

--- a/src/presentation/web/client/TriPower.Presentation.Web.Client.csproj
+++ b/src/presentation/web/client/TriPower.Presentation.Web.Client.csproj
@@ -17,8 +17,13 @@
     
     <ItemGroup>
         <ProjectReference Include="..\..\..\kernel\client\TriPower.Kernel.Client.csproj"/>
+        <ProjectReference Include="..\..\..\kernel\math\TriPower.Kernel.ElectricalMathematics.csproj" />
         <ProjectReference Include="..\..\..\services\electrical\application.shared\TriPower.Electrical.Application.Shared.csproj" />
         <ProjectReference Include="..\..\..\services\identity\application.shared\TriPower.Identity.Application.Shared.csproj"/>
+    </ItemGroup>
+    
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Pages\Rooms\EditRoomPage.razor" />
     </ItemGroup>
 
 </Project>
