--- a/src/services/electrical/domain.shared/TriPower.Electrical.Domain.Shared.csproj
+++ b/src/services/electrical/domain.shared/TriPower.Electrical.Domain.Shared.csproj
@@ -7,4 +7,8 @@
         <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\kernel\core\TriPower.Kernel.csproj"/>
+    </ItemGroup>
+
 </Project>
